# ijepa_lite

./: .dockerignore  .gitignore  README.md  hacky_stl10_logreg.py  pyproject.toml  requirements.txt
configs/: config.yaml  hydra.yaml
configs/data/: cifar10.yaml  imagenet.yaml  stl10.yaml
configs/experiment/: cifar10_linear_probe.yaml  cifar10_vits.yaml  debug.yaml  debug_linear_probe.yaml  imagenet_linear_probe.yaml  imagenet_vitb.yaml  stl10_linear_probe.yaml  stl10_vits.yaml  stl10_vits_ps8_comp4.yaml
configs/logger/: wandb.yaml
configs/loss/: vanilla.yaml
configs/masking/: block.yaml  multiblock.yaml
configs/model/: vit_torchvision.yaml
configs/optim/: adamw.yaml
configs/predictor/: base.yaml
configs/sched/: warmup_cosine.yaml
configs/task/: linear_probe.yaml  pretrain.yaml
configs/train/: eval_linear.yaml  pretrain.yaml
docker/: Dockerfile_base  Dockerfile_dev  Dockerfile_train  docker.sh  entrypoint_train.sh
scripts/: prepare_imagenet_subset.sh  sanity_run.sh
src/ijepa_lite/: build.py  run.py
src/ijepa_lite/callbacks/: base.py  ckpt_cb.py  handler.py  progress_cb.py  wandb_cb.py
src/ijepa_lite/data/: classes.py  collate.py  datasets.py  transforms.py
src/ijepa_lite/engine/: checkpoint.py  eval_linear.py  train_loop.py
src/ijepa_lite/losses/: vanilla.py
src/ijepa_lite/masking/: block_mask.py  multiblock_mask.py
src/ijepa_lite/models/: ema.py  ijepa.py  predictor.py  vit_tokens.py
src/ijepa_lite/utils/: dist.py  meters.py  metrics.py  seed.py
