[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ijepa-lite"
version = "0.1.0"
description = "Lightweight, modular I-JEPA research implementation (PyTorch+Hydra+W&B)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "torch>=2.5.1",
  "torchvision",
  "numpy",
  "pillow",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "tqdm>=4.66.5",
  "wandb>=0.19.0",
  "datasets",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]